Update disqus blog name

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   ## Author's twitter name
   twitter:   SusanPotter
   disqus: 
-    shortname: mbbx6spp-7languages7weeks
+    shortname: mbbx6spp-github-blog
 
 ## The absolute URL of your site. Should be user.github.com or whatever is in
 ## the root CNAME file
